# chartli

./: README.md  jsr.json  package-lock.json  package.json  tsup.config.ts
.commandcode/taste/: taste.md
.github/workflows/: release-rust.yml
examples/: README.md
examples/assets/: weekly-metrics.txt  weekly-signups.txt
rust/: Cargo.toml  README.md  deploy.md
rust/npm/: package.json
rust/src/: banner.rs  normalize.rs
rust/src/charts/: braille.rs  heatmap.rs  mod.rs  svg.rs
skills/chartli/: SKILL.md
src/: lib.ts
src/commands/: chart.ts
src/utils/: ascii.ts  bars.ts  braille.ts  chart-annotations.ts  columns.ts  heatmap.ts  normalize.ts  spark.ts  svg.ts  unicode.ts
tests/: ascii.test.ts  extra-charts.test.ts  normalize.test.ts  svg.test.ts
