[package]
name = "chartli"
version = "0.0.1"
edition = "2021"
description = "CLI for terminal charts from numeric data"
license = "Apache-2.0"

[[bin]]
name = "chartli"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
indicatif = "0.17"
colored = "2"
atty = "0.2"
